Esto es el repositorio de PROGRAMACION AVANZADA CICLO 4

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /JPA/APRENDIENDO ANTES DEL EXMEN/proyectoJPA_Net_Beans/build/
+/Prueba Bimestral/bimestral/nbproject/private/
+/Prueba Bimestral/bimestral/build/
