--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /JPA/APRENDIENDO ANTES DEL EXMEN/proyectoJPA_Net_Beans/build/
 /Prueba Bimestral/bimestral/nbproject/private/
 /Prueba Bimestral/bimestral/build/
+/Prueba Bimestral/Bimestral_Curso_2/nbproject/private/
+/Prueba Bimestral/Bimestral_Curso_2/build/
+/Prueba Bimestral/Prueba_Bimestral_2/nbproject/private/
+/Prueba Bimestral/Prueba_Bimestral_2/build/
+/Prueba Bimestral/Bimestral_Curso_2/dist/
